<resources>
    <string name="app_name">Swasth Bihar</string>
    <string name="health_care_worker">Health Care Worker</string>
    <string name="user">User</string>
    <string name="login">login</string>
    <string name="enter_your_10_digit_mobile_number">Enter Your 10-digit Mobile Number</string>
    <string name="enter_your_mobile_number">enter your mobile number</string>
    <string name="Continue">Continue</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="wait_for_the_verification_code">Wait for the Verification Code</string>
    <string name="verify">Verify</string>
    <string name="successful">Successful</string>
    <string name="exit">Exit</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="textview">TextView</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="condition_if_any">Condition if any</string>
    <string name="sign_up">Sign Up</string>
    <string name="emergency_contact_no">Emergency Contact No.</string>
    <string name="path_highlight">Path Highlight</string>
    <string name="profile">Profile</string>
    <string name="vicinity">Vicinity</string>
    <string name="area_demographics">Area Demographics</string>
    <string name="settings">Settings</string>
    <string name="checking_if_user_exists">Checking if user exists...</string>
    <string name="complications">Complications</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="mobileno">Mobile No.</string>
    <string name="names">Name</string>
    <string name="ages">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="checking_if_your_account_exists">Checking if your account exists...</string>
    <string name="title_activity_user_maps">Map</string>
    <string name="mark_healthy">Mark Healthy</string>
    <string name="mark_positive">Mark Positive</string>
    <string name="user_updated">User Updated</string>
    <string name="get_details">Get Details</string>
    <string name="enter_patients_10_digit_number">Enter Patients 10-Digit Number</string>
    <string name="enter_patients_mobile_number">Enter patients mobile number</string>
    <string name="medical_conditions">Medical conditions</string>
    <string name="covid_19_test">Covid 19 test</string>
    <string name="your_profile">Your Profile</string>
    <string name="title_activity_test__maps">Map</string>
    <string name="title_activity_about">About</string>
    <string name="large_text">
        "Swasth Bihar\n\n"

        "Our team has developed an app which we believe will help in slowing down the community spread"
        "of COVID-19 with the help of the feature of vicinity alert. The tagging of patients will be"
        "carried out by registered medical professionals to prevent any false and wrong registrations."
        "For the help of users in critical conditions we have added the features of helping centres"
        "and emergency contacts for quick redressal of queries. \n\n"

        "FEATURES\n\n"

        "HEALTHCARE WORKER\n\n"

        "Tag a patient – Allows registered medical professionals to mark patients who have a"
        "positive test result for Covid-19.\n\n"
        "Forum – A medium for medical professionals to discuss and share knowledge among themselves"
        "about complications in cases, new treatment plans and responses to"
        "different treatments in different cases.\n\n"

        "USER\n\n"

        "Profile – displays the vital information of the users such as blood group, medical"
        "conditions if any and emergency contacts.\n\n"
        "Vicinity alert – An important feature of the app that allows you to view if there are"
        "any positive cases in a 100-meter radius from your location.\n\n"
        "Testing centres - Provides the location of the nearest testing centres and hospitals for"
        "easier navigation.\n\n"
        "Emergency contacts – All the government helplines in one place redirecting to the dial-pad"
        "for quick contacting.\n\n"
        "Volunteering – A gateway for interested volunteers to register themselves with the government.\n\n"
        "Preventive measures – a slideshow of creative animations showing the safety and helping"
        "measures one can take in these tough times.\n\n"
        "Donation gateways – A gateway to the site of PM CARES FUND and GOVERNMENT OF KARNATAKA enables"
        "users to make donations to help the government.\n\n"
        "Settings – Enables the user to update and delete their profile when they want.\n\n"


        "CREDITS\n\n"

        "Preventive Measures Illustration by A.A. DOODLES&#8482; (Ashwini.A.Abhang) \n\n"
         "Follow on Instagram: <a href="https://www.instagram.com/ashwiniabhang/?igshid=1vyng6o4824za">Ahiru</a>"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_worker">About</string>
    <string name="title_activity_forum">Forum</string>

</resources>
